@@ -3,9 +3,13 @@ package ganew;
 import ganew.population.InitializeFeasiblePopulation;
 import geneticalgorithms.stopcriterias.StopCriteria;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Random;
 import knapsack.KConstraintMultipleKnapsack;
+import knapsack.Solution;
 
 public class GeneticalAlgorithm {
   KConstraintMultipleKnapsack knapsack;
@@ -31,23 +35,34 @@ public class GeneticalAlgorithm {
     List<Chromosom> population = InitializeFeasiblePopulation.initializePopulation(knapsack, popSize);
     Chromosom best = null;
     int bestFit = 0;
-    for(Chromosom c : population){
-      int fitness = c.getFitness();
-      if(fitness > bestFit){
-        bestFit=fitness;
-        best = c;
-      }
-    }
+    int[] fitnesses = new int[population.size()];
+    int fitSum = 0;
     boolean action = false;
     while(!criteria.stop(action)){
       //Create new pop
+      for(int i = 0; i < population.size(); i++){
+        fitnesses[i] = population.get(i).getFitness();
+        fitSum += fitnesses[i];
+        if(fitnesses[i] > bestFit){
+          bestFit=fitnesses[i];
+          best = population.get(i);
+        }
+      }
       //Choose Parents (Completely random)
       List<Chromosom> newPop = new ArrayList<>(popSize);
       while(newPop.size()<popSize){
+        ArrayList<Double> ratios = new ArrayList<>(population.size());
+        for(int i = 0; i < population.size(); i++){
+          if(i==0){
+            ratios.add((double) fitnesses[i]/(double) fitSum);
+          }else{
+            ratios.add(ratios.get(i-1)+ ((double) fitnesses[i]/(double) fitSum));
+          }
+        }
+        Chromosom p1 = population.get( (-Collections.binarySearch(ratios, random.nextDouble()) - 1));
+        Chromosom p2 = population.get((-Collections.binarySearch(ratios, random.nextDouble()) - 1));
         //Select individuals
-        Chromosom p1 = population.get(random.nextInt(population.size()));
-        Chromosom p2 = population.get(random.nextInt(population.size()));
-        Chromosom chromosom = null;
+        Chromosom chromosom;
         //Recombination
         if(random.nextDouble() < crossoverProb){
           Integer[] child = new Integer[knapsack.getNrItems()];
@@ -64,16 +79,15 @@ public class GeneticalAlgorithm {
               child[i] = notUsed.remove(0);
             }
           }
-          chromosom= new Chromosom(List.of(child), knapsack);
+          chromosom= new Chromosom(Arrays.asList(child), knapsack);
         }else{
           chromosom = (random.nextBoolean())?p1:p2;
         }
         if(random.nextDouble()<mutationProb){
           int index1 = random.nextInt(knapsack.getNrKnapsacks());
           int index2 = random.nextInt(knapsack.getNrKnapsacks());
-          Integer value = chromosom.getSolution().get(index2);
-          chromosom.setValue(index2, chromosom.getSolution().get(index1));
-          chromosom.setValue(index1, value);
+          chromosom.swap(index1, index2);
+
         }
         int fitness = chromosom.getFitness();
         if(fitness > bestFit){
@@ -82,7 +96,9 @@ public class GeneticalAlgorithm {
         }
         newPop.add(chromosom);
       }
-
+      population = newPop;
+      fitnesses = new int[population.size()];
+      fitSum = 0;
     }
     return best;
   }
